--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,18 @@
-body,html{
-  background: red;
+@import url('https://rsms.me/inter/inter-ui.css'); // TODO: add font to repo instead of relying on this cdn
+
+html,body,#app{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter UI', sans-serif;
+}
+
+.pull-left{
+  float: left;
+  display: inline-block;
+}
+.pull-right{
+  float:right;
+  display: inline-block;
 }
