Added the Inter UI font to the repo
instead of using a cdn

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('https://rsms.me/inter/inter-ui.css'); // TODO: add font to repo instead of relying on this cdn
+@import url('inter-ui.css');
 
 html,body,#app{
   width: 100%;
