Created a global.scss file that gets auto injected into all modules

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,3 +1,8 @@
-body{
-  background: red!important;
+// TODO: Move mix-in to a global file
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
