General scss changes

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,4 +1,11 @@
-// TODO: Move mix-in to a global file
+/*
+  This file contains all the global mixins and variables.
+  It gets auto injected into all the .Vue modules,
+  as described in the vue.config.js
+*/
+$background: #fff;
+$font-color: #000;
+
 @mixin clearfix {
   &:after {
     content: "";
