--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,7 +7,16 @@ html,body,#app{
   padding: 0;
   font-family: 'Inter UI', sans-serif;
 }
+.container{
+  max-width: 1000px;
+  margin:0 auto;
+  @media screen and (max-width: 1000px) {
+    margin: 0 50px;
+  }
+}
 
+
+/* Helper classes */
 .pull-left{
   float: left;
   display: inline-block;
@@ -17,26 +26,21 @@ html,body,#app{
   display: inline-block;
 }
 
-.portfolio{
-  background: #FAFAFA;
-  width: 100%;
-  text-align: center;
-  padding-top: 20px;
-  @include clearfix;
-}
-.buttons{
+/* Buttons */
+.button-group{
   max-width: 500px;
   margin: 20px auto;
 }
+
 .button,button{
+  display: inline-block;
   padding: 10px 15px;
   margin: 5px;
   border: none;
   border-radius: 3px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.10), 0 1px 2px rgba(0,0,0,0.20);
   font-weight: 500;
   background: #fff;
-  display: inline-block;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.10), 0 1px 2px rgba(0,0,0,0.20);
   transition: color .5s, background .5s;
   &:hover{
     background: #f2f2f2;
@@ -50,6 +54,7 @@ html,body,#app{
   }
 }
 
+/* Page transitions */
 .fade-enter-active, .fade-leave-active {
   transition: opacity .2s ease;
 }
