--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -33,7 +33,8 @@ a{
 // Buttons
 .button-group{
   max-width: 500px;
-  margin: 20px auto;
+  margin: 0 auto;
+  padding: 30px 0;
 }
 
 .button,button{
@@ -49,7 +50,7 @@ a{
   &:hover{
     background: #f2f2f2;
   }
-  &.active{
+  &.router-link-exact-active{
     background: #434343;
     color:#fff;
   }
@@ -70,8 +71,11 @@ a{
 
 /* Page transitions */
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .2s ease;
+  transition: opacity .3s ease;
 }
 .fade-enter, .fade-leave-to {
   opacity: 0;
+}
+.hidden{
+  display: none;
 }
