--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,7 +8,15 @@ html,body,#app{
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Inter UI', sans-serif;
+//  font-family: 'Inter UI', sans-serif;
+font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, Helvetica, sans-serif;
+}
+p{
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+font-size: 1em;
+font-style: normal;
+line-height: 25px;
 }
 
 .container{
