--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,7 +8,7 @@ html,body,#app{
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, Helvetica, sans-serif;
-  //cursor: url("../pointer.cur"), default;
+  cursor: url("../pointer.cur"), default;
 }
 
 p{
